examples/test/testpolicy17695.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17695
  namespace: namespace82
spec:
  podSelector:
    matchLabels:
      key12: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value25
          key47: value38
      podSelector:
        matchLabels:
          key26: value47
          key2: value40
